# dnssrc

./: .gitignore  Cargo.toml  LICENSE.TXT  NOTES.md  README.md  dnssrc.pl  gen_certs.sh  manual-test.sh
.github/workflows/: release.yml
legacy-perl-version/: dnssrc.pl
src/: handler.rs  main.rs  options.rs  playground.rs
tls/: ca.der  ca.key  ca.pem  ca.pubkey  cert.csr  cert.key  cert.p12  cert.pem
