[package]
name = "dnssrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
bytemuck = "1.13.1"
byteorder = { version = "1.4.3", features = ["std", "i128"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
daemonize = "0.5.0"
ipnet = { version = "2.7.1", features = ["serde"] }
pem = "1.1.1"
privdrop = "0.5.3"
rand = "0.8.5"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
trust-dns-server = { version = "0.22.0", default-features = false, features = ["dnssec-openssl", "dns-over-https-rustls", "dns-over-rustls", "dns-over-quic"] }
